[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/enemy/Bowser.gd" type="Script" id=1]
[ext_resource path="res://assets/enemy/sprites/Bowser_1.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/sprites/Bowser_2.png" type="Texture" id=3]
[ext_resource path="res://assets/enemy/sprites/Bowser_3.png" type="Texture" id=4]
[ext_resource path="res://assets/enemy/sprites/Bowser_4.png" type="Texture" id=5]
[ext_resource path="res://assets/shoot/Fireball.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/enemy/music/SMB - Bowser's fire.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 32.5038

[node name="Bowser" type="Node2D" groups=["enemy"]]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )
Shoot = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="ShootSpawnLeft" type="Position2D" parent="."]
position = Vector2( -19, -6 )

[node name="ShootSpawnRight" type="Position2D" parent="."]
position = Vector2( 19, -6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="BowsersFire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
